--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 .main {
     background-color: #F7F4F3;
     border-radius: 16px;
-    width: 624px;
+    width: 664px;
     margin: 16px;
     padding: 32px;
 }
@@ -26,8 +26,8 @@ body {
 }
 
 .card__avatar {
-    width: 148px;
-    height: 148px;
+    width: 128px;
+    height: 128px;
     border-radius: 50%;
     margin-right: 32px;
 }
@@ -57,7 +57,16 @@ body {
     font-size: 18px;
     color: #545454;
     margin: 0;
-    font-style: italic;
+}
+
+.date {
+    font-weight: bold;
+    color: #cf78c8
+}
+
+.special {
+    font-weight: bolder;
+    color: #A5D8FF;
 }
 
 .social {
