--- a/style.css
+++ b/style.css
@@ -18,22 +18,25 @@ body {
     width: 664px;
     margin: 16px;
     padding: 32px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .card {
-    display: flex;
-    align-items: flex-start;
+    text-align: center;
 }
 
 .card__avatar {
-    width: 128px;
-    height: 128px;
+    width: 148px;
+    height: 148px;
     border-radius: 50%;
-    margin-right: 32px;
+    margin-bottom: 20px;
+    opacity: 0.9;
 }
 
 .card__header {
     margin-bottom: 24px;
+    text-align: left;
 }
 
 
@@ -41,12 +44,14 @@ body {
     font-size: 36px;
     font-weight: normal;
     margin: 0;
+    text-align: left;
 }
 
 .card__description {
     font-style: 16px;
     line-height: 22px;
     margin: 0;
+    text-align: left;
 }
 
 .card__description--footer {
@@ -64,13 +69,17 @@ body {
     color: #cf78c8
 }
 
+ul {
+    list-style: none;
+}
+
 .special {
     font-weight: bolder;
     color: #A5D8FF;
 }
 
 .social {
-    font-size: 18px;
+    font-size: 28px;
     margin: 6px;
     color: #545454;
     transition: .3s;
@@ -80,4 +89,21 @@ body {
     font-size: 18px;
     margin: 6px;
     color: #cf78c8
+}
+
+@media (min-width: 479px) {
+    .card {
+        display: flex;
+        align-items: flex-start;
+    }
+    
+    .card__avatar {
+        width: 128px;
+        height: 128px;
+        margin-right: 32px;
+    }
+
+    .social {
+        font-size: 18px;
+    }
 }
